--- a/package.json
+++ b/package.json
@@ -22,13 +22,20 @@
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
+    "@nestjs/config": "^0.2.4",
     "@nestjs/core": "^9.0.0",
     "@nestjs/mongoose": "^9.2.0",
+    "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@types/hbs": "^4.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "firebase": "^9.9.1",
     "firebase-admin": "^11.0.1",
+    "hbs": "^4.2.0",
     "mongoose": "^6.5.1",
+    "passport": "^0.6.0",
+    "passport-firebase-jwt": "^1.2.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
