--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "firebase": "^9.9.1",
     "firebase-admin": "^11.0.1",
     "hbs": "^4.2.0",
-    "mongoose": "^6.5.1",
+    "mongoose": "^6.2.2",
     "passport": "^0.6.0",
     "passport-firebase-jwt": "^1.2.1",
     "reflect-metadata": "^0.1.13",
@@ -61,7 +61,9 @@
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "4.0.0",
-    "typescript": "^4.3.5"
+    "typescript": "^4.3.5",
+    "webpack": "^5.74.0",
+    "webpack-dev-server": "^4.10.1"
   },
   "jest": {
     "moduleFileExtensions": [
