--- a/app.yaml
+++ b/app.yaml
@@ -1,7 +1,9 @@
-runtime: nodejs16
+runtime: nodejs
+env: flex
 
-# env_variables:
-# DB_KEY : "abc"
-# JWT_SECRET : "***"
-
-# service : service1
+manual_scaling:
+  instances: 1
+resources:
+  cpu: 1
+  memory_gb: 0.5
+  disk_size_gb: 10
