--- a/package.json
+++ b/package.json
@@ -65,6 +65,9 @@
     "webpack": "^5.74.0",
     "webpack-dev-server": "^4.10.1"
   },
+  "engines": {
+    "node": "16.x.x"
+  },
   "jest": {
     "moduleFileExtensions": [
       "js",
