--- a/app.yaml
+++ b/app.yaml
@@ -1,9 +1,7 @@
 runtime: nodejs16 
 env: standard
 service: default
-
-
-instance_class: F1
+# instance_class: F1
 
 manual_scaling:
   instances: 1
